[gd_scene load_steps=10 format=3 uid="uid://c8f702ds7kyvu"]

[ext_resource type="Script" path="res://Musica.gd" id="1_wmysw"]
[ext_resource type="Script" path="res://HSlider Sound.gd" id="2_8alp4"]
[ext_resource type="Texture2D" uid="uid://b73bjyfehi55v" path="res://Arte/UI/Fondo.png" id="2_ik02u"]
[ext_resource type="AudioStream" uid="uid://b01wco0jrw6qr" path="res://Escenas/Audio del Juego/Prueba de audio para nivel base.mp3" id="3_kjx2n"]
[ext_resource type="AudioStream" uid="uid://bh21r1xgknihk" path="res://Escenas/Audio del Juego/Laser o disparo de nave (mp3cut.net).mp3" id="4_7myvo"]
[ext_resource type="Texture2D" uid="uid://dq2dfpmi3qf18" path="res://Arte/Botones/Volver.png" id="6_wghxb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_beycg"]
bg_color = Color(0.054902, 0.00392157, 0.00392157, 0.568627)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.258824, 0.121569, 0.92549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_noh8t"]
bg_color = Color(0.0117647, 0.00784314, 0, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0.309804, 0.0705882, 0.0392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knu70"]
bg_color = Color(0.203922, 0.0235294, 0.0235294, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmysw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.002
anchor_bottom = 1.0
offset_right = -0.296143
offset_bottom = 4.0
texture = ExtResource("2_ik02u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.369
anchor_bottom = 0.222
offset_left = 40.0
offset_top = 176.0
offset_right = -16.088
offset_bottom = 328.144
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1

[node name="Master volume" type="Button" parent="VBoxContainer"]
modulate = Color(0.898039, 0.870588, 0.803922, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 21
theme_override_styles/normal = SubResource("StyleBoxFlat_beycg")
text = "Master Volume"

[node name="Sound Effect" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_noh8t")
text = "Sound Effects"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.007
anchor_right = 1.0
anchor_bottom = 0.506
offset_left = 416.064
offset_right = -32.0
offset_bottom = 72.112

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
custom_minimum_size = Vector2(700, 400)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
min_value = -30.0
max_value = 0.0
script = ExtResource("2_8alp4")

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.16
anchor_right = 0.965
anchor_bottom = 0.5
offset_left = 416.0
offset_top = 144.32
offset_right = 16.3199
offset_bottom = 324.0

[node name="HSlider Effect" type="HSlider" parent="HBoxContainer2"]
custom_minimum_size = Vector2(700, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 1
min_value = -30.0
max_value = 0.0

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_kjx2n")
volume_db = -12.435
autoplay = true

[node name="Disparo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7myvo")
volume_db = -7.913

[node name="Back" type="Button" parent="."]
visible = false
layout_mode = 2
offset_left = 776.0
offset_top = 592.0
offset_right = 1145.0
offset_bottom = 631.0
theme_override_colors/font_color = Color(0.729412, 0.921569, 0.964706, 1)
theme_override_colors/font_pressed_color = Color(0.141176, 0.180392, 0.180392, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = SubResource("StyleBoxFlat_knu70")
keep_pressed_outside = true
text = "Volver"

[node name="Volver" type="Button" parent="."]
layout_mode = 0
offset_left = 934.0
offset_top = 512.0
offset_right = 1150.0
offset_bottom = 648.0
icon = ExtResource("6_wghxb")
icon_alignment = 1
expand_icon = true

[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer2/HSlider Effect" to="." method="_on_h_slider_effect_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Volver" to="." method="_on_volver_pressed"]
